[tool.poetry]
name = "brazil_traffic_accidents"
version = "0.1.0"
description = "Analysis of accidents on Brazilian roads"
authors = ["Joao Corte <jpaulorc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.5"
click = "^8.0.3"
streamlit = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
mypy = "^0.931"
black = "^21.12b0"
pandas-stubs = "^1.2.0"
ipython = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
